# predicting-ball

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
.do/: app.yaml
.github/: dependabot.yml
.github/workflows/: backtest.yml  daily_update.yml  monitoring.yml  test.yml  test_update.yml  weekly_update.yml
.streamlit/: config.toml
app/: main.py
app/components/: __init__.py  analytics.py  footer.py  probability_bar.py
app/pages/: __init__.py  about.py  fixtures.py  projections.py  team_strengths.py
app/styles/: __init__.py  custom_css.py
notebooks/: dixon-coles.qmd  pipeline.qmd  poisson.qmd
outputs/models/: best_hyperparams.pkl  calibrators.pkl  production_model.pkl
outputs/predictions/: all_future_fixtures.csv  next_fixtures.csv  season_projections.csv
outputs/validation/: team_analysis_2026.csv  validation_report.csv
scripts/: generate_predictions.py  run_calibration.py  run_complete_pipeline.py  run_data_pipeline.py  train_model.py  validate_model.py
scripts/automation/: download_db.py  fetch_and_update_db.py  upload_db.py  validate_update.py
scripts/automation/setup/: initial_upload.py
scripts/data-processing/: run_data_pipeline.py
scripts/evaluation/: check_calibration.py  inspect_model.py  run_backtest.py  run_monitoring.py
scripts/modeling/: check_calibration.py  check_quality.py  generate_predictions.py  run_calibration.py  run_complete_pipeline.py  run_model_pipeline.py  train_model.py  validate_model.py
src/: etl.sql  ingest.R
src/evaluation/: __init__.py  baselines.py  calibration_plots.py  coverage.py  metrics.py  significance.py
src/features/: __init__.py  feature_builder.py  odds_features.py  odds_imputation.py  schedule_features.py  squad_features.py  weighted_goals.py  weighted_performance.py  xg_features.py
src/io/: __init__.py  model_io.py  output_builders.py  spaces.py
src/models/: __init__.py  calibration.py  dixon_coles.py  fisher_information.py  hyperparameters.py  poisson.py  priors.py  ratings.py
src/processing/: __init__.py  data_processor.py  model_preparation.py
src/scrapers/: __init__.py  base_scraper.py  elo_scraper.py  fbref_scraper.py  odds_scraper.py  transfermarkt_scraper.py
src/simulation/: __init__.py  bootstrap.py  hot_simulation.py  monte_carlo.py  predictions.py  sampling.py
src/utils/: __init__.py  season_utils.py  team_utils.py
src/validation/: __init__.py  backtest.py  diagnostics.py  splits.py
src/visualisation/: __init__.py  diagnostics.py  tables.py
tests/: conftest.py
tests/property/: __init__.py  test_probabilities.py
tests/unit/: test_baselines.py  test_calibration.py  test_check_quality.py  test_coverage_eval.py  test_dixon_coles.py  test_fisher_information.py  test_generate_predictions.py  test_hot_simulation.py  test_hyperparameters.py  test_metrics.py  test_monte_carlo.py  test_poisson.py  test_predictions.py  test_priors.py  test_ratings.py  test_sampling.py  test_significance.py  test_splits.py  test_weighted_goals.py
tests/unit/app/: test_projections.py  test_season_state.py
