[project]
name = "predicting-ball"
version = "1.0.0"
description = "Predicting match and season outcomes in the Bundesliga (and beyond)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.3",
    "fastapi>=0.136.3",
    "great-tables>=0.17.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=2.3.0",
    "pillow>=12.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.37.0",
    "streamlit>=1.58.0",
    "altair>=6.2.1",
    "streamlit-aggrid>=1.1.9",
    "watchdog>=6.0.0",
    "streamlit-js-eval>=0.1.7",
    "boto3>=1.43.24",
    "statsmodels>=0.14.5",
    "setuptools>=82.0.1",
    "selenium>=4.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.155.2",
    "pandera>=0.31.1",
    "ruff>=0.15.16",
    "ty>=0.0.44",
    "pre-commit>=4.6.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.hatch.build]
packages = ["src"]

# Testing
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (e.g. hyperparameter optimisation)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# Linting
[tool.ruff]
line-length = 95
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "SIM108", # ternary operator
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Type checking
[tool.ty.environment]
python-version = "3.11"
